force-app/main/default/objects/Message__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>system</fullName>
                <label>System</label>
            </value>
            <value>
                <fullName>user</fullName>
                <default>true</default>
                <label>User</label>
            </value>
            <value>
                <fullName>assistant</fullName>
                <label>Assistant</label>
            </value>
            <value>
                <fullName>tool</fullName>
                <label>Tool</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>