force-app/main/default/objects/Message__c/fields/ToolCallId__c.field-meta.xml
<CustomField>
    <fullName>ToolCallId__c</fullName>
    <label>Tool Call Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>