force-app/main/default/objects/Message__c/fields/ToolName__c.field-meta.xml
<CustomField>
    <fullName>ToolName__c</fullName>
    <label>Tool Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>